src/test/ui/nll/borrowed-temporary-error.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/borrowed-temporary-error.rs:20:10
   |
LL |         &(v,)
   |          ^^^^ creates a temporary which is freed while still in use
LL |         //~^ ERROR temporary value dropped while borrowed [E0714]
LL |     });
   |       - temporary value is freed at the end of this statement
LL |     println!("{:?}", x);
   |                      - borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0714`.
